ractored the commit files to fix sonarqube issues